add Projects and Tasks controller, tests and documentation
